--- a/app/src/main/res/layout/activity_view_search_result2.xml
+++ b/app/src/main/res/layout/activity_view_search_result2.xml
@@ -10,4 +10,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.wilder.blabla_wild.ViewSearchActivityResult2">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:id="@+id/listViewResult"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
