--- a/app/src/main/res/layout/activity_search_itinerary.xml
+++ b/app/src/main/res/layout/activity_search_itinerary.xml
@@ -71,6 +71,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="12dp"
+        android:focusable="false"
         android:id="@+id/editText3" />
 
     <Button
