--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,9 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="8dp" />
 
+
+
+
     <include
         android:id="@+id/include"
         layout="@layout/content_main"
@@ -46,6 +49,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.501" />
+
+
+    <TextView
+        android:id="@+id/account"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/account"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/include"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp" />
 
     <Button
         android:id="@+id/submit_button"
